cmake_minimum_required(VERSION 3.10.0)
project(TurtleDemo VERSION 0.1.0 LANGUAGES C CXX)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(TurtleDemo  turtle.cpp demo.cpp Drawable.cpp Star.cpp Triangle.cpp Rectangle.cpp Square.cpp Line.cpp)
target_link_libraries( TurtleDemo ${OpenCV_LIBS} )
